Ensure icon vertical alignment regardless of XHTML/HTML5

--- a/src/autoindex.scss
+++ b/src/autoindex.scss
@@ -203,4 +203,12 @@ body {
         }
     }
 
+    td {
+        &.indexcolicon {
+            img {
+                vertical-align: middle;
+            }
+        }
+    }
+
 }
